# cargo-dependabot-if-necessary

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: main.rs
