[package]
name = "cargo-dependabot-if-necessary"
version = "0.1.1"
edition = "2021"
authors = ["Sjoerd Simons <sjoerd@collabora.com>"]
license = "MIT OR Apache-2.0"
description = "Cargo dependabot config generator with increase-if-necessary strategy"
repository = "https://github.com/sjoerdsimons/cargo-dependabot-if-necessary"
readme = "README.md"

[dependencies]
anyhow = "1.0.95"
cargo_toml = "0.22.1"
clap = { version = "4.5.29", features = ["derive"] }
dependabot-config = "0.3.4"
semver = "1.0.25"
